add opengraph images and user profile route
